DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2004-04-16 allenb       Removed auto-creation of install alias in AutoDist.
                        This was causing problems when multiple packages
                        install to the same prefix.
2004-04-14 allenb       Added RPM packager.
2004-04-14 allenb       Added support for packagers.
2004-04-13 allenb       Refactor AutoDist to make it handle files and prefixes
                        better.
2004-03-25 allenb       Require param to boost option stating wether to use
                        debug and multi-threaded libraries.  This should help
                        avoid problems that occur if you just let the defaults
                        get used.
2004-03-09 allenb       Updated pyste builder to scons 0.95
2004-03-06 allenb       Updated the autodist factory methods for libs and
                        programs to use the package environment by default.
2004-03-06 allenb       Add smarter search for boost include path.
2004-02-27 allenb       Added OpenSG option set.
2004-02-25 allenb       Updated Options code so options with multiple keys
                        could have help text per option.
                        Fixed boost option to work with the new boost build.
2003-12-30 allenb       Fixed problem with boost/filesystem/operations.hpp in
                        Boost options class.
2003-12-22 allenb       Added FileBundle object for installing sets of files
                        within a package.
                        NEW VERSION: 0.0.10
2003-11-20 allenb       Added new util methods for getting paths in SConscripts
                        NEW VERSION: 0.0.9
2003-11-19 allenb       Fixed bug in pyste option when script does not exist.
2003-11-10 allenb       Added builder for package config scripts.
2003-11-10 allenb       Removed global Prefix() method replacing it with 